nagger site verification

--- a/index.html
+++ b/index.html
@@ -40,5 +40,7 @@
         <p>Welcome to your ultimate destination for unblocked games! Whether you're looking to unwind during a break or challenge your friends, our extensive collection offers something for everyone. From action-packed adventures to brain-teasing puzzles, all our games are accessible and free to play, ensuring you can enjoy them anytime, anywhere. Dive into our user-friendly platform, where you can easily find your favorite titles and discover new ones. Join our community of gamers today and experience the thrill of unblocked gaming like never before!</p>
         <a class="gamesBrowse glass" href="games.html">Explore Games</a>
     </div>
+    <div class="cool-background"></div>
+
 </body>
 </html>
