--- a/games/minecraft.html
+++ b/games/minecraft.html
@@ -46,5 +46,17 @@
             Minecraft Unblocked lets you dive into the ultimate sandbox adventure, free from restrictions. Whether you're crafting towering castles or surviving the night against mobs, this version of Minecraft is perfect for playing at school or work—no downloads, no logins, just pure creativity. Build, mine, and explore endless worlds right in your browser. If you're looking for a fun and free way to enjoy the game, Minecraft Unblocked is the best way to play online. Start building today—anytime, anywhere!
         </p>
     </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5698886275599668"
+        crossorigin="anonymous"></script>
+    <!-- sigma vertical -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-5698886275599668"
+        data-ad-slot="2405088247"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 </body>
 </html>
