--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <script src="scripts/injectgames.js" defer></script>
     <script src="scripts/script.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Explore a vast collection of free unblocked games 76/6x/g plus, ideal for school or work. Enjoy easy access and a beautiful interface for endless fun anywhere!">
+    <meta name="description" content="Explore a vast collection of free unblocked games 64/6x/g plus, ideal for school or work. Enjoy easy access and a beautiful interface for endless fun anywhere!">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Unblocked Games 64">
-    <meta property="og:description" content="Explore a vast collection of free unblocked games 76/6x/g plus, ideal for school or work. Enjoy easy access and a beautiful interface for endless fun anywhere!">
+    <meta property="og:description" content="Explore a vast collection of free unblocked games 64/6x/g plus, ideal for school or work. Enjoy easy access and a beautiful interface for endless fun anywhere!">
     <meta property="og:image" content="../assets/logo.png">
     <meta property="og:url" content="https://unblockedgames64.github.io">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,6 +22,16 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5698886275599668"
      crossorigin="anonymous"></script>
 </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VYJ5H21PCG"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-VYJ5H21PCG');
+    </script>
+
 <body>
     <div class="header glass">
         <img src="assets/logo.png" alt="" class="logo">
