--- a/about.html
+++ b/about.html
@@ -9,19 +9,29 @@
     <script src="scripts/injectgames.js" defer></script>
     <script src="scripts/script.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Explore a vast collection of free unblocked games 76/6x/g plus, ideal for school or work. Enjoy easy access and a beautiful interface for endless fun anywhere!">
+    <meta name="description" content="Explore a vast collection of free unblocked games 64/6x/g plus, ideal for school or work. Enjoy easy access and a beautiful interface for endless fun anywhere!">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Unblocked Games 77">
-    <meta property="og:description" content="Explore a vast collection of free unblocked games 76/6x/g plus, ideal for school or work. Enjoy easy access and a beautiful interface for endless fun anywhere!">
+    <meta property="og:title" content="Unblocked Games 64">
+    <meta property="og:description" content="Explore a vast collection of free unblocked games 64/6x/g plus, ideal for school or work. Enjoy easy access and a beautiful interface for endless fun anywhere!">
     <meta property="og:image" content="../assets/logo.png">
-    <meta property="og:url" content="https://unblockedgames77.github.io">
+    <meta property="og:url" content="https://unblockedgames64.github.io">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Home - Unblocked Games 77</title>
+    <title>Home - Unblocked Games 64</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5698886275599668"
      crossorigin="anonymous"></script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VYJ5H21PCG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VYJ5H21PCG');
+</script>
+
 <body>
     <div class="header glass">
         <img src="assets/logo.png" alt="" class="logo">
