--- a/contact.html
+++ b/contact.html
@@ -23,15 +23,15 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5698886275599668"
      crossorigin="anonymous"></script>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VYJ5H21PCG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VYJ5H21PCG"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-VYJ5H21PCG');
-</script>
+    gtag('config', 'G-VYJ5H21PCG');
+    </script>
 
 <body>
     <div class="header glass">
@@ -43,18 +43,17 @@
             <a href="contact.html">Contact</a>
         </div>
     </div>
-    <div class="website-body">
-    <div id="games-sidebar" class="sidebar glass">
 
-    </div>
-    
-    <div class="content">
-        <img class="header-logo" src="assets/logo.png">
-        <h1>About <span class="rainbow">Us</span></h1>
-        <p>At our core, we are passionate about making unblocked games accessible to everyone. Our platform was created with the goal of providing a space where players can enjoy free, uninterrupted gaming—no matter the restrictions they may face. We believe that games are a universal language, bringing people together through fun, challenge, and adventure. From casual players to hardcore gamers, we strive to offer something for every kind of gamer. Our team is committed to continuously expanding our library, improving user experience, and fostering a welcoming community where everyone can connect and enjoy gaming to the fullest.</p>
-        <p>We created this website because we were frustrated with the lack of quality and accessibility in other unblocked gaming platforms. As gamers ourselves, we’ve faced the same annoyances—slow load times, broken links, and clunky interfaces—that many of our users experience. Coming from a background just like yours, we knew there had to be a better way. That’s why we built this site with you in mind. We designed it from the ground up, with a focus on speed, simplicity, and a seamless gaming experience. Every feature was crafted based on our own needs as players, ensuring that you get the smooth, reliable experience you deserve every time you visit.</p>
-        <a class="gamesBrowse glass" href="games.html">Explore Games</a>
-                    <ins class="adsbygoogle"
+    <div class="website-body">
+        <div id="games-sidebar" class="sidebar glass">
+
+        </div>
+
+        <div class="content">
+            <img class="header-logo" src="assets/logo.png">
+            <h1>Contact</h1>
+            <a class="gamesBrowse glass" href="https://docs.google.com/forms/d/e/1FAIpQLSdQZJQb0gX4V7FI1fArapFsEnfQDdqbOyKVTxemLenk738YWg/viewform?usp=dialog">Request a game</a>
+                                <ins class="adsbygoogle"
                 style="display:block"
                 data-ad-format="autorelaxed"
                 data-ad-client="ca-pub-5698886275599668"
@@ -62,9 +61,10 @@
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
+        </div>
     </div>
-    </div>
-        <div id="popup-ad">
+
+    <div id="popup-ad">
         <!-- popup-square -->
         <ins class="adsbygoogle"
             style="display:block"
@@ -76,7 +76,7 @@
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
     </div>
-    <div class="cool-background"></div>
 
+    <div class="cool-background"></div>
 </body>
 </html>
