--- a/games.html
+++ b/games.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/favicon.png">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/responsive.css">
     <script src="scripts/homeinject.js" defer></script>
     <script src="scripts/injectgames.js" defer></script>
     <script src="scripts/script.js" defer></script>
@@ -39,16 +40,51 @@
             <a class="homelink" href="">Home</a>
             <a href="games.html">Games</a>
             <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </div>
     </div>
+    <div class="website-body">
     <div id="games-sidebar" class="sidebar glass">
 
     </div>
     <div class="content">
-        <img class="header-logo" src="assets/logo.png">
-        <h1>About <span class="rainbow">Us</span></h1>
-        <p>At our core, we are passionate about making unblocked games accessible to everyone. Our platform was created with the goal of providing a space where players can enjoy free, uninterrupted gaming—no matter the restrictions they may face. We believe that games are a universal language, bringing people together through fun, challenge, and adventure. From casual players to hardcore gamers, we strive to offer something for every kind of gamer. Our team is committed to continuously expanding our library, improving user experience, and fostering a welcoming community where everyone can connect and enjoy gaming to the fullest.</p>
-        <a class="gamesBrowse glass" href="contact.html">Get in Touch</a>
+        <h1 class="header-h1">Games</h1>
+
+        <div class="explorecontainer">
+            <div class="explore">
+                <h1>Popular</h1>
+                <div class="game-carousel" id="popular"></div>
+            </div>
+            <div class="explore">
+                <h1>New</h1>
+                <div class="game-carousel" id="new"></div>
+            </div>
+            <div class="explore">
+                <h1>All</h1>
+                <div class="game-icons" id="all"></div>
+            </div>
+        </div>
+                            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-format="autorelaxed"
+                data-ad-client="ca-pub-5698886275599668"
+                data-ad-slot="4835401344"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+    </div>
+    </div>
+        <div id="popup-ad">
+        <!-- popup-square -->
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-5698886275599668"
+            data-ad-slot="9969567708"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </div>
     <div class="cool-background"></div>
 
