--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/favicon.png">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/responsive.css">
     <script src="scripts/homeinject.js" defer></script>
     <script src="scripts/injectgames.js" defer></script>
     <script src="scripts/script.js" defer></script>
@@ -39,18 +40,42 @@
             <a class="homelink" href="">Home</a>
             <a href="games.html">Games</a>
             <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </div>
     </div>
-    <div id="games-sidebar" class="sidebar glass">
 
+    <div class="website-body">
+        <div id="games-sidebar" class="sidebar glass">
+
+        </div>
+
+        <div class="content">
+            <img class="header-logo" src="assets/logo.png">
+            <h1>The <span class="rainbow">future</span> of unblocked games</h1>
+            <p>Welcome to your ultimate destination for unblocked games! Whether you're looking to unwind during a break or challenge your friends, our extensive collection offers something for everyone. From action-packed adventures to brain-teasing puzzles, all our games are accessible and free to play, ensuring you can enjoy them anytime, anywhere. Dive into our user-friendly platform, where you can easily find your favorite titles and discover new ones. Join our community of gamers today and experience the thrill of unblocked gaming like never before!</p>
+            <a class="gamesBrowse glass" href="games.html">Explore Games</a>
+                                <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-format="autorelaxed"
+                data-ad-client="ca-pub-5698886275599668"
+                data-ad-slot="4835401344"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
     </div>
-    <div class="content">
-        <img class="header-logo" src="assets/logo.png">
-        <h1>The <span class="rainbow">future</span> of unblocked games</h1>
-        <p>Welcome to your ultimate destination for unblocked games! Whether you're looking to unwind during a break or challenge your friends, our extensive collection offers something for everyone. From action-packed adventures to brain-teasing puzzles, all our games are accessible and free to play, ensuring you can enjoy them anytime, anywhere. Dive into our user-friendly platform, where you can easily find your favorite titles and discover new ones. Join our community of gamers today and experience the thrill of unblocked gaming like never before!</p>
-        <a class="gamesBrowse glass" href="games.html">Explore Games</a>
+    <div id="popup-ad">
+        <!-- popup-square -->
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-5698886275599668"
+            data-ad-slot="9969567708"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </div>
     <div class="cool-background"></div>
-
 </body>
 </html>
