--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,6 @@
             <a class="homelink" href="">Home</a>
             <a href="games.html">Games</a>
             <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
         </div>
     </div>
 
@@ -61,6 +60,8 @@
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
+            <div class="footer"><a href="privacypolicy.html">Privacy Policy</a><a href="termsandconditions.html">Terms & Conditions</a><a href="contact.html">Contact Us</a></div>
+
         </div>
     </div>
 
