--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
             <a class="homelink" href="">Home</a>
             <a href="games.html">Games</a>
             <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
         </div>
     </div>
 
@@ -54,7 +53,7 @@
             <h1>The <span class="rainbow">future</span> of unblocked games</h1>
             <p>Welcome to your ultimate destination for unblocked games! Whether you're looking to unwind during a break or challenge your friends, our extensive collection offers something for everyone. From action-packed adventures to brain-teasing puzzles, all our games are accessible and free to play, ensuring you can enjoy them anytime, anywhere. Dive into our user-friendly platform, where you can easily find your favorite titles and discover new ones. Join our community of gamers today and experience the thrill of unblocked gaming like never before!</p>
             <a class="gamesBrowse glass" href="games.html">Explore Games</a>
-                                <ins class="adsbygoogle"
+            <ins class="adsbygoogle"
                 style="display:block"
                 data-ad-format="autorelaxed"
                 data-ad-client="ca-pub-5698886275599668"
@@ -62,6 +61,8 @@
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
+
+            <div class="footer"><a href="privacypolicy.html">Privacy Policy</a><a href="termsandconditions.html">Terms & Conditions</a><a href="contact.html">Contact Us</a></div>
         </div>
     </div>
     <div id="popup-ad">
