--- a/contact.html
+++ b/contact.html
@@ -51,8 +51,12 @@
         <div class="content">
             <img class="header-logo" src="assets/logo.png">
             <h1>Contact</h1>
+
             <a class="gamesBrowse glass" href="https://docs.google.com/forms/d/e/1FAIpQLSdQZJQb0gX4V7FI1fArapFsEnfQDdqbOyKVTxemLenk738YWg/viewform?usp=dialog">Request a game</a>
-                                <ins class="adsbygoogle"
+            <div class="gform">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdkYNobqqI2yXTrZL5kcWnzAD-pIYc-Doyik5UJfptHC8K1Pg/viewform?embedded=true" width="640" height="590" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            </div>
+            <ins class="adsbygoogle"
                 style="display:block"
                 data-ad-format="autorelaxed"
                 data-ad-client="ca-pub-5698886275599668"
