--- a/games/minecraft.html
+++ b/games/minecraft.html
@@ -144,7 +144,7 @@
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-            <div class="footer"><a href="privacypolicy.html">Privacy Policy</a><a href="termsandconditions.html">Terms & Conditions</a><a href="contact.html">Contact Us</a></div>
+            <div class="footer"><a href="../privacypolicy.html">Privacy Policy</a><a href="../termsandconditions.html">Terms & Conditions</a><a href="../contact.html">Contact Us</a></div>
 
         </div>
 
