nah this shit IS aura

--- a/games/cookieclicker.html
+++ b/games/cookieclicker.html
@@ -14,7 +14,7 @@
         // Example: Run on page load
         window.addEventListener("DOMContentLoaded", async () => {
         rowData = await fetchRow("Sheet1", getIdByName(document.getElementsByClassName("gamebar")[0].firstChild.innerHTML) + 1); // fetch row 2 of "Sheet1"
-        document.getElementById("stats").innerHTML = `${rowData[0] + 1} Views<br>${rowData[1]} Likes`
+        document.getElementById("stats").innerHTML = `${rowData[0] + 1} Views<br>${rowData[1] === "" ? "0" : rowData[1]} Likes`
 
 
         // Example: increment cell A2
